
170203 Martin Mann :
 * configure.ac : 
   + check for VRNA >= 2.3.0 via function 'vrna_md_copy' exists
 * AccessibilityConstraint
   + maxBpSpan + getter : maximal base pair span to be considered for 
     accessibility computation
 * Accessibility* :
   - getES() : now part of InteractionEnergy interface
 * AccessibilityVrna :
   - EsMatrix : moved to InteractionEnergyVrna
   - esValues : moved to InteractionEnergyVrna
   - computeES() : moved to InteractionEnergyVrna
   * constructor() :
     - plFoldL : now via AccessibilityConstraint.getMaxBpSpan()
     - computeES
   * ED >= 0 ensured
 * InteractionEnergy :
   * getES*() now abstract and to be implemented in subclass
   - getES*() implementation based on Accessibility interface
 * InteractionEnergyBasePair :
   + getES*() : throws exception since not implemented yet
   * constructor() :
     + initES : whether or not to compute precompute ES values
 * InteractionEnergyVrna :
   * constructor() :
     + initES : whether or not to compute precompute ES values
   + EsMatrix data type
   + esValues1/2 : optional ES value data
   + getES*() : returns esValues* entry if available; throws exception otherwise
   + computeES() : inits ES values based on VRNA routines
 * VrnaHandler :
   * getModel() :
     * uses now vrna_md_copy() (VRNA >= 2.3.0) for model copying
 * CommandLineParsing :
   * energy : 
     - 'F' : replaced by 'V'
     + 'V' : VRNA based computation
   - OutputMode : replaced by char encoding
   * outMode : now char encoding
 * OutputHandlerText :
   + detailedOutput : flag to switch between detailed and reduced output
   * add() : 
     + heads detailedOutput flag
   * construction() :
     + detailedOutput flag handling
 * PredictorMfe2d :
   * initHybridE() :
     + outConstraint argument
     * bugfix : maxE check was not considering outConstraint.maxE
   * fillHybridE() :
     + outConstraint argument
 * PredictorMfe4d* :
   * predict :